--- a/package.json
+++ b/package.json
@@ -1,66 +1,37 @@
 {
-  "name": "104-f2e-category-panel",
-  "version": "0.1.0",
+  "name": "104-f2e-cvue3",
   "private": true,
+  "version": "0.0.1",
   "scripts": {
-    "serve": "vue-cli-service serve --mode development",
-    "build": "vue-cli-service build --mode development",
-    "lint": "vue-cli-service lint --mode development",
-    "build:lab": "vue-cli-service build --mode lab",
-    "build:staging": "vue-cli-service build --mode staging",
-    "build:production": "vue-cli-service build --mode production"
+    "serve": "vite --mode development",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vuelidate/core": "^2.0.0-alpha.42",
-    "@vuelidate/validators": "^2.0.0-alpha.30",
-    "@vueuse/core": "^9.0.2",
-    "autoprefixer": "^10",
-    "axios": "^0.27.2",
-    "core-js": "^3.8.3",
-    "lodash": "^4.17.21",
-    "node-sass": "^7.0.1",
-    "postcss": "^8",
-    "sass-loader": "^13.0.0",
-    "stylelint": "^14.9.1",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^26.0.0",
-    "stylelint-config-standard-scss": "^4.0.0",
-    "tailwindcss": "^3",
-    "vue": "^3.2.13",
-    "vue-click-outside": "^1.1.0",
-    "vue-router": "^4.0.15",
-    "vue-types": "^4.1.1",
-    "vuex": "^4.0.2"
+    "@vue/compat": "^3.2.45",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "8.9.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "vue-cli-plugin-tailwind": "~3.0.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+    "@vitejs/plugin-legacy": "^3.0.1",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue2": "2.2.0",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier-vue": "^4.2.0",
+    "eslint-plugin-vue": "^9.2.0",
+    "sass": "^1.57.1",
+    "stylelint": "^14.16.0",
+    "stylelint-config-prettier": "^9.0.4",
+    "stylelint-config-standard": "^29.0.0",
+    "stylelint-config-standard-scss": "^6.1.0",
+    "stylelint-scss": "^4.3.0",
+    "terser": "^5.16.1",
+    "vite": "^4.0.3",
+    "vite-plugin-eslint": "^1.6.1",
+    "vitest": "^0.24.3",
+    "vue-eslint-parser": "^9.0.3"
+  }
 }
