--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,19 @@
 node_modules
 /dist
 
+/tests/e2e/videos/
+/tests/e2e/screenshots/
 
 # local env files
 .env.local
 .env.*.local
+!.env.*.local.sample
+!.env.vagrant
 
 # Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
 # Editor directories and files
 .idea
@@ -20,4 +23,12 @@ pnpm-debug.log*
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
+
+inspect/*
+
+src/pages/local
+config/vue/workspace/local.js
+templates/local
+.nyc_output/
+coverage/
+storybook-static
