--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vite --mode development",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@vue/compat": "^3.2.45",
@@ -17,11 +19,13 @@
     "@vitejs/plugin-legacy": "^3.0.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue2": "2.2.0",
+    "@vue/test-utils": "^2.1.0",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-prettier-vue": "^4.2.0",
     "eslint-plugin-vue": "^9.2.0",
+    "happy-dom": "^8.1.2",
     "sass": "^1.57.1",
     "stylelint": "^14.16.0",
     "stylelint-config-prettier": "^9.0.4",
@@ -31,7 +35,7 @@
     "terser": "^5.16.1",
     "vite": "^4.0.3",
     "vite-plugin-eslint": "^1.6.1",
-    "vitest": "^0.24.3",
+    "vitest": "^0.26.3",
     "vue-eslint-parser": "^9.0.3"
   }
 }
