--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,19 +8,30 @@ orbs:
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  example-job:
+  install node:
     docker:
       # replace with your preferred image
       - image: cimg/base:stable
     steps:
       - node/install:
-          install-yarn: false 
           node-version: '14' 
       - run:
           name: node version
           command: node -v
+  test:
+    docker:
+      # replace with your preferred image
+      - image: cimg/base:stable
+    steps:
+      - node/install:
+          install-yarn: true 
+          node-version: '14' 
+      - run:
+          name: yarn test
+          command: yarn test
 
 workflows:
-  example-workflow:
+  test-workflow:
     jobs:
-      - example-job
+      - install node
+      - test
