--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,23 +4,42 @@ version: 2.1
 
 orbs:
   node: circleci/node@5.0.3
+  heroku: circleci/heroku@1.2.6
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  test:
-    docker:
-      # replace with your preferred image
-      - image: cimg/base:stable
+  build_and_test: # this can be any name you choose
+    executor: node/default # use the default executor defined within the orb
     steps:
-      - node/install:
-          install-yarn: true 
-          node-version: '14' 
+      - checkout
+      - node/install-packages:
+          pkg-manager: yarn
       - run:
-          name: yarn test
+          name: Run tests
           command: yarn test
+      # - run:
+      #     name: Build app
+      #     command: yarn build
+      # - persist_to_workspace:
+      #     root: ~/project
+      #     paths: .
+  deploy: # this can be any name you choose
+    executor: heroku/default
+    steps:
+      - attach_workspace:
+          at: ~/project
+      - heroku/deploy-via-git:
+          force: true
+          # force push when pushing to the heroku remote, see: https://devcenter.heroku.com/articles/git
 
 workflows:
-  test-workflow:
+  build_test_deploy: # this can be any name you choose
     jobs:
-      - test
+      - build_and_test
+      # - deploy:
+      #     requires:
+      #       - build_and_test # only deploy if the build_and_test job has completed
+      #     filters:
+      #       branches:
+      #         only: main # only deploy when on main
