--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,8 +60,8 @@ jobs:
           install-yarn: false 
           node-version: '14' 
       - run:
-          name: node version
-          command: echo "tagged! ${CIRCLE_TAG}"
+          name: print tag
+          command: echo tagged! ${CIRCLE_TAG}
   # build:
   #   executor: node/default
   #   steps:
