--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,14 +101,8 @@ jobs:
   #         name: print tag
   #         command: echo tagged! $CIRCLE_TAG
   build:
-    # executor: node/default
-    docker:
-      # replace with your preferred image
-      - image: cimg/base:stable
+    executor: node/default
     steps:
-      - node/install:
-          install-yarn: true 
-          node-version: '14'
       - node/install-packages:
           pkg-manager: yarn
       - run:
