--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,6 +104,7 @@ jobs:
     executor: node/default
     steps:
       - node/install-packages:
+          app-dir: ~/project/card-game
           pkg-manager: yarn
       - run:
           command: yarn build
