--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,7 +114,7 @@ jobs:
       - persist_to_workspace:
           root: ./card-game/dist
           paths:  
-            - ./card-game/dist
+            - dist/*
   release-assets:
     executor: node/default
     steps:
