--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ orbs:
 jobs:
   build_and_test: # this can be any name you choose
     executor: node/default # use the default executor defined within the orb
+    working_directory: /tmp
     steps:
       - checkout
       - node/install-packages:
@@ -19,35 +20,30 @@ jobs:
           command: yarn test
       - run:
           name: Build app
-          command: pwd & yarn build
+          command: pwd & yarn build  & ls
+      - persist_to_workspace:
+          root: workspace
+          paths: .
+  deploy: # this can be any name you choose
+    executor: node/default
+    steps:
+      - attach_workspace:
+          # Must be absolute path or relative path from working_directory
+          at: /tmp/workspace
       - run:
           name: Install firebase
           command: npm install --save-dev firebase-tools
       - run:
-          app-dir: ~/project/card-game
           name: Deploy app to Firebase Hosting
           command: pwd & ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN
-      - persist_to_workspace:
-          root: ~/project
-          paths: .
-  # deploy: # this can be any name you choose
-  #   executor: node/default
-  #   steps:
-  #     - run:
-  #         name: Install firebase
-  #         command: npm install --save-dev firebase-tools
-  #     - run:
-  #         app-dir: ~/project/card-game
-  #         name: Deploy app to Firebase Hosting
-  #         command: pwd & ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN
 
 workflows:
   build_test_deploy: # this can be any name you choose
     jobs:
       - build_and_test
-      # - deploy:
-      #     requires:
-      #       - build_and_test # only deploy if the build_and_test job has completed
+      - deploy:
+          requires:
+            - build_and_test # only deploy if the build_and_test job has completed
           # filters:
           #   branches:
           #     only: main # only deploy when on main
