--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,14 +112,14 @@ jobs:
       - run:
           command: yarn build
       - persist_to_workspace:
-          root: ~/
+          root: ~/project
           paths:  
-            - project/card-game/dist/*
+            - dist
   release-assets:
     executor: node/default
     steps:
     - attach_workspace:
-        at: ./build/dist
+        at: ~/project
     - run:
         command: node ../tag-release.js
 
