--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,9 +125,9 @@ jobs:
       - attach_workspace:
           at: ~/project
       - run:
-          command:
-            - ls
-            - node tag-release.js
+          command: ls
+      - run:
+          command: node tag-release.js
 
 workflows:
   build_test_deploy: # this can be any name you choose
