--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,6 +122,8 @@ jobs:
       - node/install:
           install-yarn: true
           node-version: '14' 
+      - node/install-packages:
+          pkg-manager: yarn
       - attach_workspace:
           at: ~/project
       - run:
