--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           command: node -v & npm -v
       - run:
           name: Install firebase
-          command: npm install -D firebase-tools & ls
+          command: npm install & npm install -D firebase-tools & ls
       - run:
           name: Deploy app to Firebase Hosting
           command: cd ~/project/node_modules & ls # & ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN
