--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,14 +31,14 @@ jobs:
       - attach_workspace:
           at: ~/project
       - run:
-          name: version
+          name: Check version
           command: node -v & npm -v
       - run:
           name: Install firebase
           command: npm install & npm install -D firebase-tools & ls
       - run:
           name: Deploy app to Firebase Hosting
-          command: cd ~/project/node_modules & ls # & ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN
+          command: cd ./node_modules & pwd & ls # & ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN
 
 workflows:
   build_test_deploy: # this can be any name you choose
