--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,8 @@ jobs:
       - node/install-packages:
           app-dir: ~/mern-starter
           cache-path: node_modules
+          override-ci-command: npm i --legacy-peer-dep
+          pkg-manager: yarn
       - run:
           name: Run tests
           command: yarn test
