--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,6 @@ version: 2.1
 
 orbs:
   node: circleci/node@5.0.3
-  firebase-deploy: azdevs/firebase-deploy@1.0.0
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
@@ -44,17 +43,16 @@ jobs:
       # Reuse the workspace from the build job
       - attach_workspace:
           at: .
-      # - run:
-      #     name: Install firebase
-      #     command: npm install -D firebase-tools & ls
+      - run:
+          app-dir: ~/mern-starter
+          name: Install firebase
+          command: npm install -D firebase-tools & ls
       - run:
           name: Check
           command: pwd & ls
-      # - run:
-      #     name: Deploy app to Firebase Hosting
-      #     command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN
-      - firebase-deploy/deploy:
-          token: $FIREBASE_TOKEN
+      - run:
+          name: Deploy app to Firebase Hosting
+          command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN
 
 workflows:
   build_test_deploy: # this can be any name you choose
