--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,10 +43,10 @@ jobs:
       # Reuse the workspace from the build job
       - attach_workspace:
           at: .
-      - run:
-          app-dir: ~/mern-starter
-          name: Install firebase
-          command: npm install -D firebase-tools & ls
+      # - run:
+      #     app-dir: ~/mern-starter
+      #     name: Install firebase
+      #     command: npm install -D firebase-tools & ls
       - run:
           name: Check
           command: pwd & ls
