--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,16 +4,21 @@ version: 2.1
 
 orbs:
   node: circleci/node@5.0.3
-  heroku: circleci/heroku@1.2.6
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   build_and_test: # this can be any name you choose
-    executor: node/default # use the default executor defined within the orb
+    working_directory: ~/mern-starter
+    # Reuse Docker container specification given by the node Orb
+    executor: node/default
     steps:
       - checkout
+      # Install dependencies - the node Orb take care of installation and dependency caching
       - node/install-packages:
+          app-dir: ~/mern-starter
+          cache-path: node_modules
+          override-ci-command: npm i --legacy-peer-dep
           pkg-manager: yarn
       - run:
           name: Run tests
@@ -21,17 +26,29 @@ jobs:
       - run:
           name: Build app
           command: yarn build
-      # - persist_to_workspace:
-      #     root: ~/project
-      #     paths: .
+      - run:
+          name: Check
+          command: pwd & ls
+      # Save workspace for subsequent jobs (i.e. test)
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
+
   deploy: # this can be any name you choose
-    executor: heroku/default
+    docker:
+      # The primary container is an instance of the first image listed. The job's commands run in this container.
+      - image: cimg/node:current
     steps:
+      # Reuse the workspace from the build job
       - attach_workspace:
-          at: ~/project
-      - heroku/deploy-via-git:
-          force: true
-          # force push when pushing to the heroku remote, see: https://devcenter.heroku.com/articles/git
+          at: .
+      - run:
+          name: Check
+          command: pwd & ls
+      - run:
+          name: Deploy app to Firebase Hosting
+          command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN
 
 workflows:
   build_test_deploy: # this can be any name you choose
