--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,7 +143,7 @@ workflows:
   tag-release:
     jobs:
       - build
-      - release
+      - release:
           requires:
             - build
           filters:
