--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vue/compat": "^3.2.45",
+    "axios": "^1.2.2",
     "firebase-tools": "^11.20.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
