--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,23 @@ jobs:
           at: ~/project
       - run:
           command: node tag-release.js
+  notify:
+    parameters:
+      pull_request:
+        type: env_var_name
+        default: CIRCLE_PULL_REQUEST
+    executor: node/default
+    steps:
+      - checkout
+      - node/install:
+          install-yarn: true
+          node-version: '14'
+      - node/install-packages:
+          pkg-manager: yarn
+      - attach_workspace:
+          at: ~/project
+      - run:
+          command: node slack-notify.js
 
 workflows:
   build_test_deploy: # this can be any name you choose
@@ -104,3 +121,9 @@ workflows:
               only: /.*/
             branches:
               ignore: /.*/
+  slack-notify:
+    when:
+      condition:
+        - not: <<parameters.pull_request>>
+    jobs:
+      - notify
