--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,6 +124,6 @@ workflows:
   slack-notify:
     when:
       condition:
-        - not: <<$CIRCLE_PULL_REQUEST>>
+        - not: $CIRCLE_PULL_REQUEST
     jobs:
       - notify
