--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,6 +105,12 @@ workflows:
           filters:
             branches:
               only: main # only deploy when on main
+      - notify:
+        requires:
+            - deploy
+          filters:
+            branches:
+              only: main
   tag-release:
     jobs:
       - build:
@@ -121,9 +127,11 @@ workflows:
               only: /.*/
             branches:
               ignore: /.*/
-  slack-notify:
-    when:
-      condition:
-        - not: $CIRCLE_PULL_REQUEST
-    jobs:
-      - notify
+      - notify:
+        requires:
+            - release
+          filters:
+            tags:
+              only: /.*/
+            branches:
+              ignore: /.*/
